# tamam-api

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  backup_volumes.txt  create_new_table.py  docker-compose-local old.yaml  docker-compose-local-test.yaml  docker-compose-local.yaml  insert_by_sqlalchemy.py  postgress.txt  pyproject.toml  requirements.txt  sert_renew.sh  shh healper  start.py  start_test.py  version  version.sh
back_end/: build.py  main.py  main_my_old.py  settings.py
back_end/api/: handlers.py  models.py
back_end/db/: dals.py  models.py  session.py
back_end/migrations/: env.py
back_end/site/: index.html  project.mobirise
back_end/tasks/: tasks.py
back_end/templates/: layout.html
back_end/utils/: telegram.py  telegramm.py
back_end_test/: Dockerfile  alembic.ini  config.py  digiseller_check.json  env.py  main.py  requirements.txt  response_model.py
backups/: postgres-backup-2023-03-21.sql
backups/server/: postgres-backup-all.sql  postgres-backup-test.sql  postgres-backup.sql
beck_end/: settings.py
beck_end/api/: handlers.py
beck_end/db/: dals.py  models.py  session.py
beck_end/utils/: telegramm.py
inser_data_to_db/: insert_by_driver.py  test_import.csv  test_import2.csv
migrations/: env.py
migrations/versions/: 3545ae222ee4_initial.py  870d1ac9edf9_new_table_names.py  e27afa5dbc18_async_driver_for_alembic.py
nginx-conf.d/: rksok.ru.conf  tamam.games.conf
sellerbot/: Dockerfile  requirements.txt  start_bot.py
sellerbot/src/: bot.py  insert_by_sqlalchemy.py  logic.py  settings.py
tests/: conftest.py
(+61 files in other folders)
